Added kubernetes support
